fixed footer overflow

--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ footer {
   position: relative;
   bottom: 0;
   width: 100%;
+  margin: 0 auto;
 }
 
 h1, h2, h3 {
@@ -179,6 +180,11 @@ button.selected {
     height: 100%;
   }
 
+  #fixed-button {
+    left: 25px;
+    position: sticky;
+  }
+
   #page-content {
     width: 95%;
   }
@@ -190,7 +196,7 @@ button.selected {
   }
 
   button {
-    min-width: 60px;
+    min-width: 65px;
     font-size: 12px;
     padding: 0.7em 2em;
     padding-left: 3px;
@@ -198,13 +204,18 @@ button.selected {
   }
 
   .side-nav {
-    width: 100%;
-    height: 100vh;
+    width: 95%;
+    height: 96vh;
     overflow-y: hidden;
     overflow-x: hidden;
   }
 
-  .vertical-container {
+  /* disable vertical page scrolling for chat area */
+  #chat-area {
+    overflow-y: hidden;
+  }
+
+  section > .vertical-container {
     width: 90%;
     flex-direction: column;
     justify-content: center;
@@ -217,7 +228,7 @@ button.selected {
     width: 90%;
   }
   
-  .horizontal-container {
+  section > .horizontal-container {
     width: 90%;
   }
 
